<?xml version="1.0"?>
<package format="2">
  <name>octomap_publisher</name>
  <version>1.0.0</version>
  <description>OctoMap Publisher</description>

  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>roslib</depend>

  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <depend>octomap</depend>
  <depend>octomap_msgs</depend>

  <export/>

</package>
